# blog

./: README.md  pyproject.toml  requirements.txt
blog/: forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_slug.py  0003_comment_comment_blog_commen_created_0e6ed4_idx.py  0004_post_tags.py
blog/templatetags/: blog_tags.py
core/: settings.py  urls.py
templates/: base.html  home.html  navbar.html
templates/blog/: blog_comment.html  blog_detail.html  blog_list.html  blog_search.html  blog_share.html
