[tool.poetry]
name = "blog2"
version = "0.1.0"
description = ""
authors = ["Alisher007 <alisherx07@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
python-dotenv = "^0.21.1"
django-crispy-forms = "^2.0"
pillow = "^9.4.0"
psycopg2 = "^2.9.5"
django-allauth = "^0.52.0"
django-taggit = "^3.1.0"
markdown = "^3.4.1"
django-markdownify = "^0.9.2"
pygments = "^2.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
